--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
     "require": {
       "yohang/finite": "1.1.0",
       "illuminate/support": "^5.4",
-      "illuminate/database": "^5.4"
+      "illuminate/database": "^5.4",
+      "doctrine/dbal": "^2.5"
     },
     "autoload": {
       "classmap": [
